--- a/src/ui-kit/form-elements/date-dropdown/date-dropdown.scss
+++ b/src/ui-kit/form-elements/date-dropdown/date-dropdown.scss
@@ -57,7 +57,7 @@
     pointer-events: none;
   }
   .glyphicon_down {
-    transform: rotate(-45deg)
+    transform: rotate(-45deg);
   }
   .glyphicon_up {
     transform: rotate(135deg);
