--- a/src/ui-kit/form-elements/filter-date-dropdown/filter-date-dropdown.scss
+++ b/src/ui-kit/form-elements/filter-date-dropdown/filter-date-dropdown.scss
@@ -25,7 +25,7 @@
     pointer-events: none;
   }
   .glyphicon_down {
-    transform: rotate(-45deg)
+    transform: rotate(-45deg);
   }
   
   .glyphicon_up {
