--- a/src/ui-kit/header/header.scss
+++ b/src/ui-kit/header/header.scss
@@ -137,7 +137,7 @@ header {box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);}
         border-left: 2px solid $dark-shade-50;
         border-bottom: 2px solid $dark-shade-50;
         pointer-events: none;
-        transform: rotate(-45deg)
+        transform: rotate(-45deg);
       }
     }
   }
